--- a/templates/admin/filter.html
+++ b/templates/admin/filter.html
@@ -1,4 +1,5 @@
-{% load i18n %}
+{% load i18n admin_list %}
+
 <details class="ce-filter" open>
   <summary class="ce-filter__summary">
     {% translate "Filters" %}
