Fix user invite flow and remove admin filters

--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -9,7 +9,7 @@
           <div class="ce-admin-tile-sub">Manage application waves, links, and exports</div>
         </a>
 
-        <a class="ce-admin-tile" href="/admin/auth/user/">
+        <a class="ce-admin-tile" href="/admin/accounts/user/">
           <div class="ce-admin-tile-title">Admin users</div>
           <div class="ce-admin-tile-sub">Manage staff accounts</div>
         </a>
