--- a/applications/templates/applications/application_form.html
+++ b/applications/templates/applications/application_form.html
@@ -76,3 +76,6 @@
     </div>
   </form>
 {% endblock %}
+{% if rendered_description %}
+  <div class="form-intro">{{ rendered_description|linebreaks }}</div>
+{% endif %}
