--- a/templates/admin_dash/database_home.html
+++ b/templates/admin_dash/database_home.html
@@ -1,9 +1,5 @@
 {% extends "admin/base_site.html" %}
 {% block content %}
-<div class="ce-admin-wrap">
-  <div class="ce-admin-card">
-    <h1 style="margin:0 0 8px 0; font-weight:800;">Database</h1>
-    <p style="margin:0; color:#444;">Exports and CSV files will live here.</p>
-  </div>
-</div>
+  <h1>Database</h1>
+  <p>This is where CSV exports / merged submissions and grading will live.</p>
 {% endblock %}
