--- a/applications/templates/applications/application_form.html
+++ b/applications/templates/applications/application_form.html
@@ -90,25 +90,25 @@
                   <th style="text-align:left; padding:10px; border-bottom:1px solid #f0f0f0;">Mañana</th>
 
                   <td style="text-align:center; padding:10px; border-bottom:1px solid #f0f0f0;">
-                    {% for w in field %}{% if w.data.value == "lunes_manana" %}{{ w.tag }}{% endif %}{% endfor %}
+                    {% for w in field %}{% if w.data.value == "mon_morning" %}{{ w.tag }}{% endif %}{% endfor %}
                   </td>
                   <td style="text-align:center; padding:10px; border-bottom:1px solid #f0f0f0;">
-                    {% for w in field %}{% if w.data.value == "martes_manana" %}{{ w.tag }}{% endif %}{% endfor %}
+                    {% for w in field %}{% if w.data.value == "tue_morning" %}{{ w.tag }}{% endif %}{% endfor %}
                   </td>
                   <td style="text-align:center; padding:10px; border-bottom:1px solid #f0f0f0;">
-                    {% for w in field %}{% if w.data.value == "miercoles_manana" %}{{ w.tag }}{% endif %}{% endfor %}
+                    {% for w in field %}{% if w.data.value == "wed_morning" %}{{ w.tag }}{% endif %}{% endfor %}
                   </td>
                   <td style="text-align:center; padding:10px; border-bottom:1px solid #f0f0f0;">
-                    {% for w in field %}{% if w.data.value == "jueves_manana" %}{{ w.tag }}{% endif %}{% endfor %}
+                    {% for w in field %}{% if w.data.value == "thu_morning" %}{{ w.tag }}{% endif %}{% endfor %}
                   </td>
                   <td style="text-align:center; padding:10px; border-bottom:1px solid #f0f0f0;">
-                    {% for w in field %}{% if w.data.value == "viernes_manana" %}{{ w.tag }}{% endif %}{% endfor %}
+                    {% for w in field %}{% if w.data.value == "fri_morning" %}{{ w.tag }}{% endif %}{% endfor %}
                   </td>
                   <td style="text-align:center; padding:10px; border-bottom:1px solid #f0f0f0;">
-                    {% for w in field %}{% if w.data.value == "sabado_manana" %}{{ w.tag }}{% endif %}{% endfor %}
+                    {% for w in field %}{% if w.data.value == "sat_morning" %}{{ w.tag }}{% endif %}{% endfor %}
                   </td>
                   <td style="text-align:center; padding:10px; border-bottom:1px solid #f0f0f0;">
-                    {% for w in field %}{% if w.data.value == "domingo_manana" %}{{ w.tag }}{% endif %}{% endfor %}
+                    {% for w in field %}{% if w.data.value == "sun_morning" %}{{ w.tag }}{% endif %}{% endfor %}
                   </td>
                 </tr>
 
@@ -117,25 +117,25 @@
                   <th style="text-align:left; padding:10px; border-bottom:1px solid #f0f0f0;">Tarde</th>
 
                   <td style="text-align:center; padding:10px; border-bottom:1px solid #f0f0f0;">
-                    {% for w in field %}{% if w.data.value == "lunes_tarde" %}{{ w.tag }}{% endif %}{% endfor %}
+                    {% for w in field %}{% if w.data.value == "mon_afternoon" %}{{ w.tag }}{% endif %}{% endfor %}
                   </td>
                   <td style="text-align:center; padding:10px; border-bottom:1px solid #f0f0f0;">
-                    {% for w in field %}{% if w.data.value == "martes_tarde" %}{{ w.tag }}{% endif %}{% endfor %}
+                    {% for w in field %}{% if w.data.value == "tue_afternoon" %}{{ w.tag }}{% endif %}{% endfor %}
                   </td>
                   <td style="text-align:center; padding:10px; border-bottom:1px solid #f0f0f0;">
-                    {% for w in field %}{% if w.data.value == "miercoles_tarde" %}{{ w.tag }}{% endif %}{% endfor %}
+                    {% for w in field %}{% if w.data.value == "wed_afternoon" %}{{ w.tag }}{% endif %}{% endfor %}
                   </td>
                   <td style="text-align:center; padding:10px; border-bottom:1px solid #f0f0f0;">
-                    {% for w in field %}{% if w.data.value == "jueves_tarde" %}{{ w.tag }}{% endif %}{% endfor %}
+                    {% for w in field %}{% if w.data.value == "thu_afternoon" %}{{ w.tag }}{% endif %}{% endfor %}
                   </td>
                   <td style="text-align:center; padding:10px; border-bottom:1px solid #f0f0f0;">
-                    {% for w in field %}{% if w.data.value == "viernes_tarde" %}{{ w.tag }}{% endif %}{% endfor %}
+                    {% for w in field %}{% if w.data.value == "fri_afternoon" %}{{ w.tag }}{% endif %}{% endfor %}
                   </td>
                   <td style="text-align:center; padding:10px; border-bottom:1px solid #f0f0f0;">
-                    {% for w in field %}{% if w.data.value == "sabado_tarde" %}{{ w.tag }}{% endif %}{% endfor %}
+                    {% for w in field %}{% if w.data.value == "sat_afternoon" %}{{ w.tag }}{% endif %}{% endfor %}
                   </td>
                   <td style="text-align:center; padding:10px; border-bottom:1px solid #f0f0f0;">
-                    {% for w in field %}{% if w.data.value == "domingo_tarde" %}{{ w.tag }}{% endif %}{% endfor %}
+                    {% for w in field %}{% if w.data.value == "sun_afternoon" %}{{ w.tag }}{% endif %}{% endfor %}
                   </td>
                 </tr>
 
@@ -144,25 +144,25 @@
                   <th style="text-align:left; padding:10px;">Noche</th>
 
                   <td style="text-align:center; padding:10px;">
-                    {% for w in field %}{% if w.data.value == "lunes_noche" %}{{ w.tag }}{% endif %}{% endfor %}
+                    {% for w in field %}{% if w.data.value == "mon_night" %}{{ w.tag }}{% endif %}{% endfor %}
                   </td>
                   <td style="text-align:center; padding:10px;">
-                    {% for w in field %}{% if w.data.value == "martes_noche" %}{{ w.tag }}{% endif %}{% endfor %}
+                    {% for w in field %}{% if w.data.value == "tue_night" %}{{ w.tag }}{% endif %}{% endfor %}
                   </td>
                   <td style="text-align:center; padding:10px;">
-                    {% for w in field %}{% if w.data.value == "miercoles_noche" %}{{ w.tag }}{% endif %}{% endfor %}
+                    {% for w in field %}{% if w.data.value == "wed_night" %}{{ w.tag }}{% endif %}{% endfor %}
                   </td>
                   <td style="text-align:center; padding:10px;">
-                    {% for w in field %}{% if w.data.value == "jueves_noche" %}{{ w.tag }}{% endif %}{% endfor %}
+                    {% for w in field %}{% if w.data.value == "thu_night" %}{{ w.tag }}{% endif %}{% endfor %}
                   </td>
                   <td style="text-align:center; padding:10px;">
-                    {% for w in field %}{% if w.data.value == "viernes_noche" %}{{ w.tag }}{% endif %}{% endfor %}
+                    {% for w in field %}{% if w.data.value == "fri_night" %}{{ w.tag }}{% endif %}{% endfor %}
                   </td>
                   <td style="text-align:center; padding:10px;">
-                    {% for w in field %}{% if w.data.value == "sabado_noche" %}{{ w.tag }}{% endif %}{% endfor %}
+                    {% for w in field %}{% if w.data.value == "sat_night" %}{{ w.tag }}{% endif %}{% endfor %}
                   </td>
                   <td style="text-align:center; padding:10px;">
-                    {% for w in field %}{% if w.data.value == "domingo_noche" %}{{ w.tag }}{% endif %}{% endfor %}
+                    {% for w in field %}{% if w.data.value == "sun_night" %}{{ w.tag }}{% endif %}{% endfor %}
                   </td>
                 </tr>
               </tbody>
